# txtodo-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: date_utils.rs  error.rs  extension.rs  filters.rs  lib.rs  options.rs  parser.rs  serializer.rs  sorts.rs  task.rs  todotxt.rs
tests/: errors.rs  filters.rs  index.rs  parser.rs  serializer.rs  smoke.rs  sorts.rs
